--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Bruno Ferrero"
+title                    : "Researcher"
 title_separator          : "-"
 name                     : "Bruno Ferrero"
 description              : "Oceanographer/Computer Scientist"
@@ -80,9 +80,9 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               : brferrero
+  username               :
 facebook:
-  username               : brferrero
+  username               :
   app_id                 :
   publisher              :
 og_image                 : # Open Graph/Twitter default site image
@@ -105,13 +105,10 @@ analytics:
 author:
   name             : "Bruno Ferrero"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
+  bio              : ""
   location         : "Sao Paulo/Brasil"
-  email            : brferrero@gmail.com
+  #email            : "brferrero@gmail.com"
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:your.name@email.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -124,9 +121,12 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/brferrero"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+    - label: "Linkedin"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/bruno-ferrero-227b6517/"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: mailto:brferrero@gmail.com
 
 # Site Footer
 footer:
@@ -139,7 +139,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url: https://github.com/brferrero
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
