--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Researcher"
+title                    : "Climate-Data Scientist"
 title_separator          : "-"
 name                     : "Bruno Ferrero"
 description              : "Oceanographer/Computer Scientist"
